Fix bug when menu items were not visible

--- a/src/theme/site/extras/menu.less
+++ b/src/theme/site/extras/menu.less
@@ -10,6 +10,7 @@
     font-size: 15px;
     font-weight: 500;
     line-height: 1.2;
+    z-index: 199;
 
     @media only screen and (max-width: 1170px) {
       font-size: 14px;
